--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     },
     "scripts": {
         "start": "node ./server.js",
-        "start:dev": "nodemon ./server.js"
+        "start:dev": "nodemon --signal SIGINT --inspect=0.0.0.0:9229 ./server.js"
     },
     "dependencies": {
         "body-parser": "^1.19.0",
+        "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "express-jwt": "^6.0.0",
